<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.LanguageInitActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/hint_language_preference"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_preference_language_prefer_activity">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_preference_language_prefer_activity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_notice_line"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/hint_language_preference_src" />

        <TextView
            android:id="@+id/text_view_src_language_language_init_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableRight="@drawable/language_exchange_down_arrow"
            android:padding="15dp"
            android:text="@string/hint_language_chinese" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_preference_language_prefer_activity">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_notice_line"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/hint_language_preference_dest" />

        <TextView
            android:id="@+id/text_view_dest_language_language_init_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:drawableRight="@drawable/language_exchange_down_arrow"
            android:padding="15dp"
            android:text="@string/hint_language_src_english" />

    </LinearLayout>
    <!---  填充 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"></View>

    <TextView
        android:id="@+id/text_view_finish_language_init_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shape_preference_language_finish_prefer_activity"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/hint_language_preference_finish"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_cancel_language_init_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/shape_preference_language_cancel_prefer_activity"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/hint_language_preference_cancel"
        android:textColor="@color/grey20"
        android:textSize="16sp" />
</LinearLayout>