<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/grey16"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/help"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/hint_tv_dialog_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/request_permission_write" />

        <TextView
            android:id="@+id/setting_tv_dialog_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/request_permission_dialog_set"
            android:textColor="@color/blue3" />

        <TextView
            android:id="@+id/exit_tv_dialog_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/setting_tv_dialog_permission"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/request_permission_dialog_exit"
            android:textColor="@color/blue3" />

    </RelativeLayout>

</RelativeLayout>