<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_list_rv_translate_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:visibility="visible">

    </android.support.v7.widget.RecyclerView>
    <!-- 第一次，语音提示。和RecyclerView互斥出现-->
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/voice_guide_rl_translate_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/voice_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_voice_guide"
                android:textColor="@color/grey19"
                android:textSize="17sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/start_voice_src_translate_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7.5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_preference_language_cancel_prefer_activity"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/hint_language_chinese"
            android:textColor="@color/grey20"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/start_voice_dest_translate_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="7.5dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_preference_language_finish_prefer_activity"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/hint_language_src_english"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>