<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_dl_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--左上角的工具栏 -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_main_activity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue3"
            android:gravity="center_vertical"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        <!--   工具栏下面的主界面-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <!-- 源语言+互换按钮+目标语言 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue3"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <LinearLayout
                    android:id="@+id/src_ll_main_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp">

                    <TextView
                        android:id="@+id/src_tv_language_main_activity"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="中文"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/language_exchange_down_arrow" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/exchange_iv_main_activity"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/language_exchange" />

                <LinearLayout
                    android:id="@+id/dest_ll_main_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="80dp">

                    <TextView
                        android:id="@+id/dest_tv_main_activity"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="英文"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/language_exchange_down_arrow" />
                </LinearLayout>


            </RelativeLayout>

            <!-- 语音翻译+文本翻译 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabLayout_main_activity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:tabBackground="@color/blue3"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@color/gray_light"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/gray_light" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager_main_activity"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <!-- 侧滑菜单  -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clickable="true"
        android:orientation="vertical">
        <!-- 登录-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/blue3">

            <ImageView
                android:id="@+id/login_iv_main_activity"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_usr_img_default" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_iv_main_activity"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hint_login_setting"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <!-- 语音设置 -->

        <RelativeLayout
            android:id="@+id/voice_setting_rl_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_voice_preference_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/voice_setting_rl_main_activity"
            android:background="#E3E3E3" />
        <!-- 我的收藏 -->
        <RelativeLayout
            android:id="@+id/favourite_rl_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_favourite_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/favourite_rl_main_activity"
            android:background="#E3E3E3" />
        <!-- 意见反馈 -->
        <RelativeLayout
            android:id="@+id/feedback_rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_feed_back_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/feedback_rl_setting"
            android:background="#E3E3E3" />
        <!-- 满意度调查 -->
        <RelativeLayout
            android:id="@+id/satisfy_survey_rl_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_satisfaction_survey_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/satisfy_survey_rl_main_activity"
            android:background="#E3E3E3" />
        <!-- 版本更新 -->
        <RelativeLayout
            android:id="@+id/update_version_rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_update_version_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/update_version_rl_setting"
            android:background="#E3E3E3" />
        <!-- 关于我们 -->
        <RelativeLayout
            android:id="@+id/about_us_rl_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:text="@string/hint_about_us_setting"
                android:textSize="17sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/setting_arrow_right" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/about_us_rl_main_activity"
            android:background="#E3E3E3" />
        <!-- 填充 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"></View>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

